<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="show_additional_fields">Show Additional Fields</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="phone_error">First introduce a phone number in Phone Dialer</string>
</resources>
